feat(user): check if exists user, configure drizzle migrations

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.4",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
